updating index.html to make obvious

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -2,6 +2,6 @@
    <head>
    </head>
    <body>
-      Welcome to the vagrant host.
+      Welcome to the vagrant host for habari.
    </body>
 </html>
